[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/records_ui.gd" type="Script" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=2]

[node name="records_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="scroll_container" type="ScrollContainer" parent="."]
margin_left = 32.0
margin_top = 24.0
margin_right = 288.0
margin_bottom = 144.0

[node name="flow_container" type="HFlowContainer" parent="scroll_container"]

[node name="go_back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -29.0
margin_right = 20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
text = "Назад"

[node name="column_name" type="Label" parent="."]
margin_left = 62.0
margin_top = 4.0
margin_right = 111.0
margin_bottom = 18.0
hint_tooltip = "Complete the level"
mouse_filter = 1
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 2 )
text = "Fastest run"
align = 1
valign = 1

[node name="column_name2" type="Label" parent="."]
margin_left = 126.0
margin_top = 4.0
margin_right = 159.0
margin_bottom = 18.0
hint_tooltip = "Complete the level killing
all enemies"
mouse_filter = 1
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 2 )
text = "Full run"
align = 1
valign = 1

[node name="column_name3" type="Label" parent="."]
margin_left = 183.0
margin_top = 4.0
margin_right = 215.0
margin_bottom = 18.0
hint_tooltip = "Complete the level
taking no damage"
mouse_filter = 1
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 2 )
text = "No hits"
align = 1
valign = 1

[node name="column_name4" type="Label" parent="."]
margin_left = 232.0
margin_top = 4.0
margin_right = 280.0
margin_bottom = 18.0
hint_tooltip = "Complete the level killing
all enemies taking no damage"
mouse_filter = 1
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 2 )
text = "Full no hits"
align = 1
valign = 1

[connection signal="pressed" from="go_back" to="." method="_on_go_back_pressed"]
